--- a/biblio.bib
+++ b/biblio.bib
@@ -56,6 +56,16 @@
   year={1988},
   publisher={Prentice-Hall, Inc.}
 }
+
+@article{rousseeuw1987silhouettes,
+  title={Silhouettes: a graphical aid to the interpretation and validation of cluster analysis},
+  author={Rousseeuw, Peter J},
+  journal={Journal of computational and applied mathematics},
+  volume={20},
+  pages={53--65},
+  year={1987},
+  publisher={Elsevier}
+}
 @report{Gower1971,
    author = {J C Gower},
    issue = {4},
