--- a/main.tex
+++ b/main.tex
@@ -34,6 +34,7 @@
 \usepackage{longtable} % Para tablas largas.
 \usepackage{pgf} % Para gráficas en formato PGF.
 \usepackage{graphicx} % Para insertar imágenes.
+\usepackage{subfigure} % Para insertar subfiguras.
 \usepackage{wrapfig} % Para posicionar imágenes alrededor del texto.
 \usepackage{fontawesome5} % Para utilizar iconos de "fontawesome".
 \usepackage{pdflscape}  % Para colocar páginas en formato apaisado.
